%% Updated 2026-05-05 — Entity-relationship diagram for conductor.db (89 migrations)
erDiagram

    _conductor_meta {
        text key PK
        text value
    }

    agent_created_issues {
        text id PK
        text agent_run_id FK
        text repo_id FK
        text source_type
        text source_id
        text title
        text url
        text created_at
    }

    agent_run_events {
        text id PK
        text run_id FK
        text kind
        text summary
        text started_at
        text ended_at
        text metadata
    }

    agent_run_steps {
        text id PK
        text run_id FK
        int position
        text description
        text status
        text started_at
        text completed_at
    }

    agent_runs {
        text id PK
        text worktree_id FK
        text session_id
        text prompt
        text status
        text result_text
        real cost_usd
        int num_turns
        int duration_ms
        text started_at
        text ended_at
        text log_file
        text model
        text plan
        text parent_run_id FK
        int input_tokens
        int output_tokens
        int cache_read_input_tokens
        int cache_creation_input_tokens
        text bot_name
        text repo_id FK
        text conversation_id FK
        int subprocess_pid
        text runtime
    }

    conversations {
        text id PK
        text scope
        text scope_id
        text title
        text created_at
        text last_active_at
    }

    feedback_requests {
        text id PK
        text run_id FK
        text prompt
        text response
        text status
        text created_at
        text responded_at
        text feedback_type
        text options_json
        int timeout_secs
    }

    notification_log {
        text entity_id PK
        text event_type PK
        text fired_at
    }

    push_subscriptions {
        text id PK
        text endpoint
        text p256dh
        text auth
        text created_at
        text updated_at
    }

    repo_issue_sources {
        text id PK
        text repo_id FK
        text source_type
        text config_json
    }

    repos {
        text id PK
        text slug
        text local_path
        text remote_url
        text workspace_dir
        text created_at
        bool allow_agent_issue_creation
        text runtime_overrides
    }

    ticket_dependencies {
        text from_ticket_id FK
        text to_ticket_id FK
        text dep_type PK
    }

    ticket_labels {
        text ticket_id FK
        text label PK
        text color
    }

    tickets {
        text id PK
        text repo_id FK
        text source_type
        text source_id
        text title
        text body
        text state
        text labels
        text assignee
        text priority
        text url
        text synced_at
        text raw_json
        text workflow
        text agent_map
    }

    workflow_run_step_fan_out_items {
        text id PK
        text step_run_id FK
        text item_type
        text item_id
        text item_ref
        text child_run_id
        text status
        text dispatched_at
        text completed_at
        text context
    }

    workflow_run_steps {
        text id PK
        text workflow_run_id FK
        text step_name
        text role
        bool can_commit
        text condition_expr
        text status
        text child_run_id
        int position
        text started_at
        text ended_at
        text result_text
        bool condition_met
        int iteration
        text parallel_group_id
        text context_out
        text markers_out
        int retry_count
        text gate_type
        text gate_prompt
        text gate_timeout
        text gate_approved_by
        text gate_approved_at
        text gate_feedback
        text structured_output
        text output_file
        text gate_options
        text gate_selections
        int subprocess_pid
        int fan_out_total
        int fan_out_completed
        int fan_out_failed
        int fan_out_skipped
        text step_error
        int input_tokens
        int output_tokens
        int cache_read_input_tokens
        int cache_creation_input_tokens
        real cost_usd
        int num_turns
        int duration_ms
    }

    workflow_runs {
        text id PK
        text workflow_name
        text worktree_id FK
        text parent_run_id FK
        text status
        bool dry_run
        text trigger
        text started_at
        text ended_at
        text result_summary
        text definition_snapshot
        text inputs
        text ticket_id FK
        text repo_id FK
        text parent_workflow_run_id FK
        text target_label
        text default_bot_name
        int iteration
        text blocked_on
        int total_input_tokens
        int total_output_tokens
        int total_cache_read_input_tokens
        int total_cache_creation_input_tokens
        int total_turns
        real total_cost_usd
        int total_duration_ms
        text model
        text error
        text last_heartbeat
        int dismissed
        text workflow_title
        text owner_token
        text lease_until
        int generation
    }

    worktrees {
        text id PK
        text repo_id FK
        text slug
        text branch
        text path
        text ticket_id FK
        text status
        text created_at
        text completed_at
        text model
        text base_branch
    }
    repos ||--o{ repo_issue_sources : "has"
    repos ||--o{ worktrees : "has"
    repos ||--o{ tickets : "has"
    repos ||--o{ features : "has"
    repos ||--o{ agent_created_issues : "has"
    repos ||--o{ workflow_runs : "targets"
    worktrees ||--o{ agent_runs : "has"
    worktrees ||--o{ workflow_runs : "runs in"
    tickets ||--o{ worktrees : "linked to"
    tickets ||--o{ workflow_runs : "targets"
    tickets ||--o{ ticket_labels : "has"
    tickets ||--o{ ticket_dependencies : "blocks"
    tickets ||--o{ ticket_dependencies : "blocked by"
    tickets ||--o{ feature_tickets : "in"
    features ||--o{ feature_tickets : "groups"
    features ||--o{ workflow_runs : "for"
    agent_runs ||--o{ agent_run_steps : "has"
    agent_runs ||--o{ agent_run_events : "emits"
    agent_runs ||--o{ feedback_requests : "requests"
    agent_runs ||--o{ agent_created_issues : "creates"
    agent_runs ||--o| agent_runs : "parent"
    conversations ||--o{ agent_runs : "contains"
    workflow_runs ||--o{ workflow_run_steps : "has"
    workflow_runs ||--o| workflow_runs : "parent"
    workflow_run_steps ||--o| agent_runs : "spawns"
